Fix text width and alignment

--- a/assets/css/sections/_blog-hero.scss
+++ b/assets/css/sections/_blog-hero.scss
@@ -3,11 +3,11 @@
 	padding-bottom: 0;
 	position: relative;
 
-	.display {
-		margin-left: auto;
-		margin-right: auto;
-		max-width: 13ch;
-	}
+	// .display {
+	// 	margin-left: auto;
+	// 	margin-right: auto;
+	// 	max-width: 13ch;
+	// }
 }
 
 @include media('>desktop') {
@@ -15,9 +15,9 @@
 		padding-top: var(--spacing-xxxl);
 		padding-bottom: var(--spacing-xxxl);
 
-		.display {
-			margin-right: 0;
-			max-width: 13ch;
-		}
+		// .display {
+		// 	margin-right: 0;
+		// 	max-width: 13ch;
+		// }
 	}
 }
